--- a/src/app/components/create-player-box/create-player-box.component.html
+++ b/src/app/components/create-player-box/create-player-box.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="createPlayerFormGroup" (ngSubmit)="onSubmit()">
-  <label>Enter Player Name: </label><input type="text" formControlName="playerName"/>
+  <label>Enter Player Name: </label
+  ><input type="text" formControlName="playerName" />
   <button type="submit" [disabled]="formIsDisabled">Create Player</button>
 </form>
