--- a/src/app/components/ship-position-box/ship-position-box.component.html
+++ b/src/app/components/ship-position-box/ship-position-box.component.html
@@ -1,16 +1,20 @@
 <form [formGroup]="shipPlacingForm" (ngSubmit)="submitPlacement()">
   <p>
-    <label>{{shipType}} </label>
+    <label>{{ shipType }} </label>
   </p>
 
   <label>Column </label>
   <select formControlName="col">
-    <option *ngFor="let header of tableHeaders$ | async" [ngValue]="header">{{header}}</option>
+    <option *ngFor="let header of (tableHeaders$ | async)" [ngValue]="header">{{
+      header
+    }}</option>
   </select>
 
   <label>Row</label>
   <select formControlName="row">
-    <option *ngFor="let rowNumber of rowNumbers" [ngValue]="rowNumber">{{rowNumber}}</option>
+    <option *ngFor="let rowNumber of rowNumbers" [ngValue]="rowNumber">{{
+      rowNumber
+    }}</option>
   </select>
 
   <label>Orientation</label>
