--- a/src/app/containers/grid/game-grid/game-grid.component.html
+++ b/src/app/containers/grid/game-grid/game-grid.component.html
@@ -1,1 +1,5 @@
-<app-grid-box [gridSize]="gridSize$" [tableHeaders$]="tableHeaders$" [tableRows$]="tableRows$"></app-grid-box>
+<app-grid-box
+  [gridSize]="gridSize$"
+  [tableHeaders$]="tableHeaders$"
+  [tableRows$]="tableRows$"
+></app-grid-box>
