--- a/src/app/components/game-status-box/game-status-box/game-status-box.component.html
+++ b/src/app/components/game-status-box/game-status-box/game-status-box.component.html
@@ -1,3 +1,5 @@
+<h1>Instruction:</h1>
+
 <div>
   <label>Number of players: </label>{{ playersInGame$ | async }}
   <label>Players that are ready: </label>{{ playersReady$ | async }}
