--- a/src/app/containers/game-control/game-control.component.html
+++ b/src/app/containers/game-control/game-control.component.html
@@ -1,3 +1,4 @@
+<app-current-order-box [orders$]="orders$"></app-current-order-box>
 <button (click)="createGameButtonClicked()" [disabled]="showJoinGameMenu">
   Create Game
 </button>
@@ -9,6 +10,7 @@
   [gameId$]="gameId$"
   (createGameEvent)="createGame($event)"
 ></app-create-game-box>
+<app-join-game-box *ngIf="showJoinGameMenu" (joinGameRequest$)="joinGame($event)"></app-join-game-box>
 <app-create-player-box
   *ngIf="showPlayerCreationMenu"
   (createPlayerRequest)="createPlayer($event)"
