--- a/src/app/components/create-game-box/create-game-box.component.html
+++ b/src/app/components/create-game-box/create-game-box.component.html
@@ -1,10 +1,10 @@
 <div id="create-game-box">
   <form [formGroup]="formGroup" (submit)="onSubmit()">
     <label>Enter number of Players</label
-    ><input type="text" formControlName="numberOfPlayers" />
+    ><input id="numberOfPlayers" type="text" formControlName="numberOfPlayers" />
     <label>Size of game arena</label
-    ><input type="text" formControlName="gridSize" />
-    <button type="submit" [disabled]="formDisabled">Create Game</button>
+    ><input type="text" id="arenaSize" formControlName="gridSize" />
+    <button type="submit" id="createGameButton" [disabled]="formDisabled">Create Game</button>
     <label>Game Id: </label>{{ gameId$ | async }}
   </form>
 </div>
