--- a/src/app/containers/shooting-screen/shooting-screen.component.html
+++ b/src/app/containers/shooting-screen/shooting-screen.component.html
@@ -2,5 +2,5 @@
 <app-current-order-box></app-current-order-box>
 <app-player-turn-info-box (pollForGameStatusEvent$)="pollForGameStatus()"></app-player-turn-info-box>
 <app-shooting-box (shootRequestEvent$)="shoot($event)"></app-shooting-box>
-<app-player-list-box [playerInfoList$]="this.playerInfoList$">
+<app-player-list-box [playersInGameInfos$]="this.playersInGameInfos$">
 </app-player-list-box>
